--- a/daily challenge/index.html
+++ b/daily challenge/index.html
@@ -1,12 +1,10 @@
-
 <!DOCTYPE html>
 <html> 
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Landing page for your business</title>
+    <title>Daily Challenge</title>
   </head>
   <header> 
     <div class="main-container-fluid p-3 navbar">
@@ -20,13 +18,13 @@
                   <nav class="desktop-nav">
                     <ul class="nav-items">
                       <li>
-                        <a href="#early">Characters</a>
+                        <a href="#">Characters</a>
                       </li>
                       <li>
-                        <a href="#paypal">About</a>
+                        <a href="#">About</a>
                       </li>
                       <li>
-                        <a href="#tesla">Help</a>
+                        <a href="#">Help</a>
                       </li>
                     </ul>
                   </nav>
@@ -42,21 +40,19 @@
     <main>
       <div class="back-black">
         <h1>THOR ORDINSON</h1>
-        <div class="input-container">
-            <p>Thor is the "God of Thunder",a member of the race known as the Asgardians, 
-              a group of humanoid beings from the pocket dimension of Asgard, the Realm Eternal.
-              Thor is the son of Odin, the All-Father and king of Asgard. He was worshiped by the humans known as 
-              Vikings and became part of Norse Mythology. Armed with his enchanted Uru hammer Mjolnir,
-              which helps him to channel his godly energies, he became the mightiest warrior in the Ten Realms. 
-              When his irresponsible and impetuous behavior became too much, Odin sent him to Midgard
-              (more commonly known as Earth) as a disabled mortal medical student named Donald Blake,
-              stripped of his memory. After learning humility he regained his memory as well as his godly powers.
-              Thor went on to become a champion for Midgard as well as one of the founding members of the Avengers, 
-              "Earth's Mightiest Heroes</p>
-        </div>
     </div>
-
+    <div class="container">
+      <div class="content">
+        <p>Thor is the "God of Thunder," a member of the race known as the Asgardians, a group of humanoid beings from the pocket dimension of Asgard, the Realm Eternal. Thor is the son of Odin, the All-Father and king of Asgard. He was worshiped by the humans known as Vikings and became part of Norse Mythology.</p>
+        <p>Armed with his enchanted Uru hammer Mjolnir, which helps him to channel his godly energies, he became the mightiest warrior in the Ten Realms. When his irresponsible and impetuous behavior became too much, Odin sent him to Midgard (more commonly known as Earth) as a disabled mortal medical student named Donald Blake, stripped of his memory.</p>
+        <p>After learning humility he regained his memory as well as his godly powers. Thor went on to become a champion for Midgard as well as one of the founding members of the Avengers, "Earth's Mightiest Heroes.</p>
+      </div>
+      <div class="image">
+        <img src="img/thors.jpg" alt="Thor Image">
+      </div>
+    </div>
+    
     </main>
-    <footer></footer>
+    <footer>Coded by Akash Aubeeluck</footer>
 </body>
 </html>
